@@ -23,8 +23,9 @@ lcs-desktop (2.4.8~1) Lcs; urgency=low
   * Adding navigation buttons in the top bar of windows
   * Adding a field "web browsing" in the dropdown menu
   * Removing unnecessary images
+  * Fix bug on setting wallpaper
 
- -- Dominique Lepaisant <dlepaisant@ac-caen.fr>  Wed, 22 Sep 2010 05:52:27 +0200
+ -- Dominique Lepaisant <dlepaisant@ac-caen.fr>  Wed, 22 Sep 2010 19:45:20 +0200
 
 lcs-desktop (0.2~18) Lcs; urgency=low
 
